Modernize build, fix Apple Silicon support, replace dead Xuggle
- Add Gradle build (replaces Eclipse .classpath with hardcoded Windows paths)
- Replace abandoned Xuggle video lib with pure-Java JCodec for MP4 export
- Add custom OpenPnpDriver so webcam capture works on Apple Silicon
  (sarxos default driver ships an x86_64-only native and crashes on arm64)
- Fix deprecated/removed APIs (win.show(), new Integer()); zero warnings
- Restructure to src/main/java, move sample clips to samples/
- Add README documenting features, setup, and known limitations

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>